<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RssReader2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_source">Enter name</string>
    <string name="edit_url">Enter URL</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="open_button">Open</string>

</resources>
