<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_source"/>

            <EditText
                android:id="@+id/edit_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_url"
                android:inputType="textUri" />

            </LinearLayout>

        <Button
            android:id="@+id/add_button"
            android:onClick="addNewSource"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_button"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/del_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:onClick="DeleteSource"/>

        <Button
            android:id="@+id/open_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/open_button"
            android:onClick="OpenSource"
            />

        </LinearLayout>

    <ListView
        android:id="@+id/source_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        </ListView>

</LinearLayout>
